--- a/frontend/public/index.html
+++ b/frontend/public/index.html
@@ -21,6 +21,13 @@
     <title>Thanh Tin Tech</title>
     <script src="https://kit.fontawesome.com/3f40b51c52.js" crossorigin="anonymous"></script>
     <script async defer crossorigin="anonymous" src="https://connect.facebook.net/vi_VN/sdk.js#xfbml=1&version=v10.0" nonce="YkV0Dr1Z"></script>
+    <script type="text/javascript"
+        src="https://cdn.jsdelivr.net/npm/emailjs-com@2.3.2/dist/email.min.js"></script>
+    <script type="text/javascript">
+      (function(){
+          emailjs.init("user_bK5t73KBwErNROVYcVPrD"); // Obtain your user ID at the dashboard https://dashboard.emailjs.com/integration
+      })();
+    </script>
   </head>
   <body>
     
