--- a/frontend/public/index.html
+++ b/frontend/public/index.html
@@ -7,7 +7,7 @@
   <meta name="viewport" content="width=device-width, initial-scale=1" />
   <meta name="theme-color" content="#000000" />
   <meta name="description"
-    content="Công ty TNHH Thành Tín chuyên cung cấp thiết bị phòng thí nghiệm, ngành công nghiệp, thực phẩm, y tế-sinh học, nước cấp-môi trường, các giải pháp tự động hóa"/>
+    content="Công ty TNHH Thành Tín Tech chuyên cung cấp thiết bị phòng thí nghiệm, ngành công nghiệp, thực phẩm, y tế-sinh học, nước cấp-môi trường, các giải pháp tự động hóa"/>
   <link rel="apple-touch-icon" href="%PUBLIC_URL%/logo192.png" />
   <link rel="manifest" href="%PUBLIC_URL%/manifest.json" />
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css" />
