--- a/frontend/public/index.html
+++ b/frontend/public/index.html
@@ -6,8 +6,9 @@
   <link rel="shortcut icon" href="./images/logofavico.jpg" />
   <meta name="viewport" content="width=device-width, initial-scale=1" />
   <meta name="theme-color" content="#000000" />
+  <meta name="keywords" content="thiết bị thí nghiệm, công nghiệp, y tế, môi trường, ngành giấy, bao bì, kiểm tra vật liệu, dược phẩm, uy tín, chất lượng, sửa chửa, hiệu chuẩn, đức" />
   <meta name="description"
-    content="Công ty TNHH Thành Tín Tech chuyên cung cấp thiết bị phòng thí nghiệm, ngành công nghiệp, thực phẩm, y tế-sinh học, nước cấp-môi trường, các giải pháp tự động hóa"/>
+    content="Thành Tín Tech chuyên cung cấp các thiết bị đo lường, máy ly tâm, lò nung, máy test giấy, nồi hấp, các loại tủ ấm sinh học... Email: sales@thanhtin-tech.com">
   <link rel="apple-touch-icon" href="%PUBLIC_URL%/logo192.png" />
   <link rel="manifest" href="%PUBLIC_URL%/manifest.json" />
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css" />
