change category's applications

--- a/frontend/public/index.html
+++ b/frontend/public/index.html
@@ -6,7 +6,7 @@
   <link rel="shortcut icon" href="./images/logofavico.jpg" />
   <meta name="viewport" content="width=device-width, initial-scale=1" />
   <meta name="theme-color" content="#000000" />
-  <meta name="keywords" content="thiết bị thí nghiệm, công nghiệp, y tế, môi trường, ngành giấy, bao bì, kiểm tra vật liệu, dược phẩm, uy tín, chất lượng, sửa chửa, hiệu chuẩn, đức" />
+  <meta name="keywords" content="brookfield,brookfield cap,đo độ nhớt,đo lưu biến,phân tích cấu trúc,brookfield ctx,geltimer,brookfield rst,brookfield lvt,brookfield rso,brookfield dv,rheometer,bể điều nhiệt" />
   <meta name="description"
     content="Thành Tín Tech chuyên cung cấp các thiết bị đo lường, máy ly tâm, lò nung, máy test giấy, nồi hấp, các loại tủ ấm sinh học... Email: sales@thanhtin-tech.com">
   <link rel="apple-touch-icon" href="%PUBLIC_URL%/logo192.png" />
@@ -36,10 +36,16 @@
     gtag('js', new Date());
     gtag('config', 'G-3WZZT1VKGB');
   </script>
-  <script src="/frontend/src/ckeditor.js"></script>
+  <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/css/bootstrap.min.css" integrity="sha384-Gn5384xqQ1aoWXA+058RXPxPg6fy4IWvTNh0E263XmFcJlSAwiGgFAW/dAiS6JXm" crossorigin="anonymous">
+  <script src="https://code.jquery.com/jquery-3.2.1.slim.min.js" integrity="sha384-KJ3o2DKtIkvYIK3UENzmM7KCkRr/rE9/Qpg6aAZGJwFDMVNA/GpGFF93hXpG5KkN" crossorigin="anonymous"></script>
+  <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.12.9/umd/popper.min.js" integrity="sha384-ApNbgh9B+Y1QKtv3Rn7W3mgPxhU9K/ScQsAP7hUibX39j7fakFPskvXusvfa0b4Q" crossorigin="anonymous"></script>
+  <script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/js/bootstrap.min.js" integrity="sha384-JZR6Spejh4U02d8jOt6vLEHfe/JQGiRRSQQxSfFWpi1MquVdAyjUar5+76PVCmYl" crossorigin="anonymous"></script>
 </head>
 <body>
   <div id="root"></div>
   <!-- <script src= defer></script> -->
+  <script src="https://code.jquery.com/jquery-1.10.2.js"></script>
+  <div class="zalo-chat-widget" data-oaid="3218628040034470645" data-welcome-message="Rất vui khi được hỗ trợ bạn!" data-autopopup="0" data-width="" data-height=""></div>
+  <script src="https://sp.zalo.me/plugins/sdk.js"></script>
 </body>
 </html>
