--- a/frontend/public/index.html
+++ b/frontend/public/index.html
@@ -9,8 +9,8 @@
   <meta name="keywords" content="brookfield,brookfield cap,đo độ nhớt,đo lưu biến,phân tích cấu trúc,brookfield ctx,geltimer,brookfield rst,brookfield lvt,brookfield rso,brookfield dv,rheometer,bể điều nhiệt" />
   <meta name="description"
     content="Thành Tín Tech chuyên cung cấp các thiết bị đo lường, máy ly tâm, lò nung, máy test giấy, nồi hấp, các loại tủ ấm sinh học... Email: sales@thanhtin-tech.com">
-  <link rel="apple-touch-icon" href="%PUBLIC_URL%/logo192.png" />
-  <link rel="manifest" href="%PUBLIC_URL%/manifest.json" />
+  <!-- <link rel="apple-touch-icon" href="%PUBLIC_URL%/logo192.png" />
+  <link rel="manifest" href="%PUBLIC_URL%/manifest.json" /> -->
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css" />
   <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0-beta2/dist/css/bootstrap.min.css" rel="stylesheet"
     integrity="sha384-BmbxuPwQa2lc/FVzBcNJ7UAyJxM6wuqIj61tLrc4wSX0szH/Ev+nYRRuWlolflfl" crossorigin="anonymous">
@@ -47,5 +47,6 @@
   <script src="https://code.jquery.com/jquery-1.10.2.js"></script>
   <div class="zalo-chat-widget" data-oaid="3218628040034470645" data-welcome-message="Rất vui khi được hỗ trợ bạn!" data-autopopup="0" data-width="" data-height=""></div>
   <script src="https://sp.zalo.me/plugins/sdk.js"></script>
+  
 </body>
 </html>
